--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+.App {
+  height: 100px;
+  background-color: rgb(68, 22, 80);
+  color: white;
+}
+
+li {
+  color: #282c34;
+}
+
+button {
+  border-radius: 20px;
+  height: 40px;
+  width: 120px;
+  background: rgb(212, 209, 209);
+  font-weight: bold;
+  margin-top: -1cm;
+}
+
+// .garphs img{
+//   height: 200px;
+// }
